@startuml

title __RULES's Class Diagram__\n

  package  {
    package rules {
      interface IparsingRule {
          {abstract} + parseBlock()
          {abstract} + getWordDistance()
      }
    }
  }
  

  package  {
    package rules {
      class STmovieParsingRule {
          + parseBlock()
          + getWordDistance()
      }
    }
  }
  

  package  {
    package rules {
      class STtvSeriesParsingRule {
          + parseBlock()
          + getWordDistance()
      }
    }
  }
  

  package  {
    package rules {
      class SimpleParsingRule {
          + parseBlock()
          + getWordDistance()
      }
    }
  }
  

  STmovieParsingRule -up-|> IparsingRule
  STtvSeriesParsingRule -up-|> IparsingRule
  SimpleParsingRule -up-|> IparsingRule


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
